2012-02-26  Oleg Endo  <olegendo@gcc.gnu.org>

	* config/sh/predicates.md: Remove blank lines.
	* config/sh/sh.c: Fix typos in comments.
	* config/sh/constraints.md: Likewise.
	* config/sh/sh.md: Remove blank lines.
	Fix typos in comments.  Use ;; as comment characters.

2012-02-26  Walter Lee  <walt@tilera.com>

	* config/tilegx/tilegx.c (match_pcrel_step2): Fix instruction
	pattern.
	(replace_mov_pcrel_step2): Ditto.

2012-02-25  Alexandre Oliva  <aoliva@redhat.com>

	PR debug/52001
	* alias.c (refs_newer_value_cb, refs_newer_value_p): New.
	(get_addr): Walk canonical value's locs.  Avoid returning VALUEs
	and locs that reference values newer than the non-canonical value
	at hand.  Return the canonical value as a worst case.
	(memrefs_conflict_p): Walk canonical value's locs.

	PR debug/52001
	* cselib.c (preserve_only_constants): Rename to...
	(preserve_constants_and_equivs): ... this.  Split out...
	(invariant_or_equiv_p): ... this.  Preserve plus expressions
	of other preserved expressions too.
	(cselib_reset_table): Adjust.
	* var-tracking.c (reverse_op): Use canonical value to build
	reverse operation.

2012-02-23  Kai Tietz  <ktietz@redhat.com>

	* config/i386/i386.c (ix86_delegitimize_address): Handle
	UNSPEC_PCREL plus displacement.

2012-02-24  Georg-Johann Lay  <avr@gjlay.de>

	PR target/52261
	* config/avr/avr.c (avr_out_movhi_mr_r_xmega): Use base
	to test for unusedness in st X addressing.

2012-02-24  Richard Guenther  <rguenther@suse.de>

	PR middle-end/52361
	* gimple.c (walk_gimple_op): Use predicates with less redundant
	tests.
	(is_gimple_reg_type): Move inline ...
	* gimple.h (is_gimple_reg_type): ... here.

2012-02-24  Richard Guenther  <rguenther@suse.de>

	PR middle-end/52361
	* passes.c (execute_function_todo): When verifying SSA form
	verify gimple form first.
	* tree-ssa.c (verify_ssa): Do not verify gimple form here.

2012-02-24  Richard Guenther  <rguenther@suse.de>

	PR middle-end/52355